inclusão de parágrafos

--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-<H1>tITULO</H1>
-<p>paragrafo</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+    <H1>tITULO</H1>
+    <p>paragrafo</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus saepe explicabo culpa dolores! Maxime voluptates esse, natus obcaecati sequi dolores fuga at aliquid illo consequatur suscipit repudiandae, ad ratione reiciendis?</p>
+    <p>Voluptas veritatis totam autem vel architecto tempora rem maxime, excepturi incidunt eius quam voluptatibus sed sint nisi expedita animi obcaecati numquam similique aliquid facere culpa ullam quas? Quae, mollitia distinctio.</p>
+    <p>Iure nemo numquam commodi voluptatibus id qui vero dolore, accusantium nostrum quisquam vitae iusto asperiores ratione eaque exercitationem laboriosam alias reprehenderit. Iusto quibusdam unde, repellendus excepturi nobis laborum facere minus.</p>
+
+</body>
+</html>
